tests/lex/invalid/binary_literal_no_value.zn
def f() {
    // error: binary literal has no value, only prefix
    var x = 0b;
}
